MiSalud/Chimichanga/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD
    NEWLINE
    ARROW_LTR
    ARROW_RTL

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement
Rule 2     statement_list -> statement_list statement
Rule 3     statement -> identifier
Rule 4     statement -> expression
Rule 5     statement -> if_statement
Rule 6     statement -> IDENTIFIER STMT_END
Rule 7     identifier -> IDENTIFIER
Rule 8     statement -> BREAK STMT_END
Rule 9     primitive -> NUM_INT
Rule 10    primitive -> NUM_FLOAT
Rule 11    primitive -> STRING
Rule 12    primitive -> boolean
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression MUL expression
Rule 16    expression -> expression DIV expression
Rule 17    expression -> expression EXP expression
Rule 18    expression -> expression MOD expression
Rule 19    expression -> expression BIT_AND expression
Rule 20    expression -> expression BIT_OR expression
Rule 21    expression -> expression BIT_XOR expression
Rule 22    expression -> expression LSHIFT expression
Rule 23    expression -> expression RSHIFT expression
Rule 24    boolean -> expression EQ expression
Rule 25    boolean -> expression NEQ expression
Rule 26    boolean -> expression GT expression
Rule 27    boolean -> expression GTE expression
Rule 28    boolean -> expression LT expression
Rule 29    boolean -> expression LTE expression
Rule 30    boolean -> expression AND expression
Rule 31    boolean -> expression OR expression
Rule 32    expression -> MINUS expression
Rule 33    expression -> PLUS expression
Rule 34    expression -> BIT_NEG expression
Rule 35    expression -> NOT expression
Rule 36    expression -> LPAREN expression RPAREN
Rule 37    boolean -> TRUE
Rule 38    boolean -> FALSE
Rule 39    assignable -> primitive
Rule 40    assignable -> expression
Rule 41    arguments -> arguments COMMA expression
Rule 42    arguments -> expression
Rule 43    arguments -> <empty>
Rule 44    expression -> expression QUESTION_MARK expression COLON expression
Rule 45    expression -> LSQBRACK arguments RSQBRACK
Rule 46    expression -> identifier LSQBRACK expression RSQBRACK
Rule 47    expression -> identifier LSQBRACK expression COLON expression RSQBRACK
Rule 48    expression -> identifier LSQBRACK COLON expression RSQBRACK
Rule 49    expression -> identifier LSQBRACK expression COLON RSQBRACK
Rule 50    expression -> identifier LSQBRACK COLON RSQBRACK
Rule 51    statement -> identifier LSQBRACK expression RSQBRACK EQUALS expression STMT_END
Rule 52    expression -> identifier EQUALS assignable STMT_END
Rule 53    if_statement -> IF LPAREN expression RPAREN LBRACK statement_list RBRACK
Rule 54    if_statement -> IF LPAREN expression RPAREN LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
Rule 55    if_statement -> IF LPAREN expression RPAREN LBRACK statement_list RBRACK ELSE if_statement
Rule 56    expression -> expression IN expression
Rule 57    expression -> expression NOT IN expression
Rule 58    statement -> PRINT LPAREN arguments RPAREN STMT_END
Rule 59    statement -> identifier PLUS_EQ expression STMT_END
Rule 60    statement -> identifier MINUS_EQ expression STMT_END
Rule 61    statement -> identifier MUL_EQ expression STMT_END
Rule 62    statement -> identifier DIV_EQ expression STMT_END
Rule 63    statement -> identifier EXP_EQ expression STMT_END
Rule 64    statement -> identifier MOD_EQ expression STMT_END
Rule 65    expression -> identifier DOUBLE_PLUS
Rule 66    expression -> identifier DOUBLE_MINUS
Rule 67    expression -> primitive
Rule 68    expression -> STRING
Rule 69    expression -> identifier
Rule 70    statement -> FOR identifier IN expression TO expression LBRACK statement_list RBRACK
Rule 71    statement -> FOR identifier IN expression LBRACK statement_list RBRACK
Rule 72    statement -> WHILE LPAREN expression RPAREN LBRACK statement_list RBRACK
Rule 73    statement -> FOR LBRACK statement_list RBRACK
Rule 74    statement -> FUNCTION identifier LPAREN arguments RPAREN LBRACK statement_list RBRACK
Rule 75    statement -> FUNCTION identifier LBRACK statement_list RBRACK
Rule 76    statement -> FUNCTION identifier LPAREN error RPAREN LBRACK statement_list RBRACK
Rule 77    statement -> RETURN expression STMT_END
Rule 78    expression -> identifier LPAREN arguments RPAREN
Rule 79    statement -> identifier LPAREN arguments RPAREN STMT_END
Rule 80    expression -> identifier LPAREN error RPAREN
Rule 81    statement -> identifier LPAREN error RPAREN STMT_END

Terminals, with rules where they appear

AND                  : 30
ARROW_LTR            : 
ARROW_RTL            : 
BIT_AND              : 19
BIT_NEG              : 34
BIT_OR               : 20
BIT_XOR              : 21
BREAK                : 8
COLON                : 44 47 48 49 50
COMMA                : 41
DIV                  : 16
DIV_EQ               : 62
DOUBLE_MINUS         : 66
DOUBLE_PLUS          : 65
ELSE                 : 54 55
EQ                   : 24
EQUALS               : 51 52
EXP                  : 17
EXP_EQ               : 63
FALSE                : 38
FOR                  : 70 71 73
FUNCTION             : 74 75 76
GT                   : 26
GTE                  : 27
IDENTIFIER           : 6 7
IF                   : 53 54 55
IN                   : 56 57 70 71
KEYWORD              : 
LBRACK               : 53 54 54 55 70 71 72 73 74 75 76
LPAREN               : 36 53 54 55 58 72 74 76 78 79 80 81
LSHIFT               : 22
LSQBRACK             : 45 46 47 48 49 50 51
LT                   : 28
LTE                  : 29
MINUS                : 14 32
MINUS_EQ             : 60
MOD                  : 18
MOD_EQ               : 64
MUL                  : 15
MUL_EQ               : 61
NEQ                  : 25
NEWLINE              : 
NOT                  : 35 57
NUM_FLOAT            : 10
NUM_INT              : 9
OR                   : 31
PLUS                 : 13 33
PLUS_EQ              : 59
PRINT                : 58
QUESTION_MARK        : 44
RBRACK               : 53 54 54 55 70 71 72 73 74 75 76
RETURN               : 77
RPAREN               : 36 53 54 55 58 72 74 76 78 79 80 81
RSHIFT               : 23
RSQBRACK             : 45 46 47 48 49 50 51
STMT_END             : 6 8 51 52 58 59 60 61 62 63 64 77 79 81
STRING               : 11 68
TO                   : 70
TRUE                 : 37
WHILE                : 72
error                : 76 80 81

Nonterminals, with rules where they appear

arguments            : 41 45 58 74 78 79
assignable           : 52
boolean              : 12
expression           : 4 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 35 36 40 41 42 44 44 44 46 47 47 48 49 51 51 53 54 55 56 56 57 57 59 60 61 62 63 64 70 70 71 72 77
identifier           : 3 46 47 48 49 50 51 52 59 60 61 62 63 64 65 66 69 70 71 74 75 76 78 79 80 81
if_statement         : 5 55
primitive            : 39 67
statement            : 1 2
statement_list       : 2 53 54 54 55 70 71 72 73 74 75 76 0

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement_list statement
    (3) statement -> . identifier
    (4) statement -> . expression
    (5) statement -> . if_statement
    (6) statement -> . IDENTIFIER STMT_END
    (8) statement -> . BREAK STMT_END
    (51) statement -> . identifier LSQBRACK expression RSQBRACK EQUALS expression STMT_END
    (58) statement -> . PRINT LPAREN arguments RPAREN STMT_END
    (59) statement -> . identifier PLUS_EQ expression STMT_END
    (60) statement -> . identifier MINUS_EQ expression STMT_END
    (61) statement -> . identifier MUL_EQ expression STMT_END
    (62) statement -> . identifier DIV_EQ expression STMT_END
    (63) statement -> . identifier EXP_EQ expression STMT_END
    (64) statement -> . identifier MOD_EQ expression STMT_END
    (70) statement -> . FOR identifier IN expression TO expression LBRACK statement_list RBRACK
    (71) statement -> . FOR identifier IN expression LBRACK statement_list RBRACK
    (72) statement -> . WHILE LPAREN expression RPAREN LBRACK statement_list RBRACK
    (73) statement -> . FOR LBRACK statement_list RBRACK
    (74) statement -> . FUNCTION identifier LPAREN arguments RPAREN LBRACK statement_list RBRACK
    (75) statement -> . FUNCTION identifier LBRACK statement_list RBRACK
    (76) statement -> . FUNCTION identifier LPAREN error RPAREN LBRACK statement_list RBRACK
    (77) statement -> . RETURN expression STMT_END
    (79) statement -> . identifier LPAREN arguments RPAREN STMT_END
    (81) statement -> . identifier LPAREN error RPAREN STMT_END
    (7) identifier -> . IDENTIFIER
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression BIT_AND expression
    (20) expression -> . expression BIT_OR expression
    (21) expression -> . expression BIT_XOR expression
    (22) expression -> . expression LSHIFT expression
    (23) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . PLUS expression
    (34) expression -> . BIT_NEG expression
    (35) expression -> . NOT expression
    (36) expression -> . LPAREN expression RPAREN
    (44) expression -> . expression QUESTION_MARK expression COLON expression
    (45) expression -> . LSQBRACK arguments RSQBRACK
    (46) expression -> . identifier LSQBRACK expression RSQBRACK
    (47) expression -> . identifier LSQBRACK expression COLON expression RSQBRACK
    (48) expression -> . identifier LSQBRACK COLON expression RSQBRACK
    (49) expression -> . identifier LSQBRACK expression COLON RSQBRACK
    (50) expression -> . identifier LSQBRACK COLON RSQBRACK
    (52) expression -> . identifier EQUALS assignable STMT_END
    (56) expression -> . expression IN expression
    (57) expression -> . expression NOT IN expression
    (65) expression -> . identifier DOUBLE_PLUS
    (66) expression -> . identifier DOUBLE_MINUS
    (67) expression -> . primitive
    (68) expression -> . STRING
    (69) expression -> . identifier
    (78) expression -> . identifier LPAREN arguments RPAREN
    (80) expression -> . identifier LPAREN error RPAREN
    (53) if_statement -> . IF LPAREN expression RPAREN LBRACK statement_list RBRACK
    (54) if_statement -> . IF LPAREN expression RPAREN LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
    (55) if_statement -> . IF LPAREN expression RPAREN LBRACK statement_list RBRACK ELSE if_statement
    (9) primitive -> . NUM_INT
    (10) primitive -> . NUM_FLOAT
    (11) primitive -> . STRING
    (12) primitive -> . boolean
    (24) boolean -> . expression EQ expression
    (25) boolean -> . expression NEQ expression
    (26) boolean -> . expression GT expression
    (27) boolean -> . expression GTE expression
    (28) boolean -> . expression LT expression
    (29) boolean -> . expression LTE expression
    (30) boolean -> . expression AND expression
    (31) boolean -> . expression OR expression
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    IDENTIFIER      shift and go to state 6
    BREAK           shift and go to state 7
    PRINT           shift and go to state 9
    FOR             shift and go to state 11
    WHILE           shift and go to state 12
    FUNCTION        shift and go to state 13
    RETURN          shift and go to state 14
    MINUS           shift and go to state 16
    PLUS            shift and go to state 15
    BIT_NEG         shift and go to state 17
    NOT             shift and go to state 18
    LPAREN          shift and go to state 10
    LSQBRACK        shift and go to state 8
    STRING          shift and go to state 20
    IF              shift and go to state 21
    NUM_INT         shift and go to state 22
    NUM_FLOAT       shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    identifier                     shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    primitive                      shift and go to state 19
    boolean                        shift and go to state 24

state 1

    (0) S' -> statement_list .
    (2) statement_list -> statement_list . statement
    (3) statement -> . identifier
    (4) statement -> . expression
    (5) statement -> . if_statement
    (6) statement -> . IDENTIFIER STMT_END
    (8) statement -> . BREAK STMT_END
    (51) statement -> . identifier LSQBRACK expression RSQBRACK EQUALS expression STMT_END
    (58) statement -> . PRINT LPAREN arguments RPAREN STMT_END
    (59) statement -> . identifier PLUS_EQ expression STMT_END
    (60) statement -> . identifier MINUS_EQ expression STMT_END
    (61) statement -> . identifier MUL_EQ expression STMT_END
    (62) statement -> . identifier DIV_EQ expression STMT_END
    (63) statement -> . identifier EXP_EQ expression STMT_END
    (64) statement -> . identifier MOD_EQ expression STMT_END
    (70) statement -> . FOR identifier IN expression TO expression LBRACK statement_list RBRACK
    (71) statement -> . FOR identifier IN expression LBRACK statement_list RBRACK
    (72) statement -> . WHILE LPAREN expression RPAREN LBRACK statement_list RBRACK
    (73) statement -> . FOR LBRACK statement_list RBRACK
    (74) statement -> . FUNCTION identifier LPAREN arguments RPAREN LBRACK statement_list RBRACK
    (75) statement -> . FUNCTION identifier LBRACK statement_list RBRACK
    (76) statement -> . FUNCTION identifier LPAREN error RPAREN LBRACK statement_list RBRACK
    (77) statement -> . RETURN expression STMT_END
    (79) statement -> . identifier LPAREN arguments RPAREN STMT_END
    (81) statement -> . identifier LPAREN error RPAREN STMT_END
    (7) identifier -> . IDENTIFIER
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression BIT_AND expression
    (20) expression -> . expression BIT_OR expression
    (21) expression -> . expression BIT_XOR expression
    (22) expression -> . expression LSHIFT expression
    (23) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . PLUS expression
    (34) expression -> . BIT_NEG expression
    (35) expression -> . NOT expression
    (36) expression -> . LPAREN expression RPAREN
    (44) expression -> . expression QUESTION_MARK expression COLON expression
    (45) expression -> . LSQBRACK arguments RSQBRACK
    (46) expression -> . identifier LSQBRACK expression RSQBRACK
    (47) expression -> . identifier LSQBRACK expression COLON expression RSQBRACK
    (48) expression -> . identifier LSQBRACK COLON expression RSQBRACK
    (49) expression -> . identifier LSQBRACK expression COLON RSQBRACK
    (50) expression -> . identifier LSQBRACK COLON RSQBRACK
    (52) expression -> . identifier EQUALS assignable STMT_END
    (56) expression -> . expression IN expression
    (57) expression -> . expression NOT IN expression
    (65) expression -> . identifier DOUBLE_PLUS
    (66) expression -> . identifier DOUBLE_MINUS
    (67) expression -> . primitive
    (68) expression -> . STRING
    (69) expression -> . identifier
    (78) expression -> . identifier LPAREN arguments RPAREN
    (80) expression -> . identifier LPAREN error RPAREN
    (53) if_statement -> . IF LPAREN expression RPAREN LBRACK statement_list RBRACK
    (54) if_statement -> . IF LPAREN expression RPAREN LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
    (55) if_statement -> . IF LPAREN expression RPAREN LBRACK statement_list RBRACK ELSE if_statement
    (9) primitive -> . NUM_INT
    (10) primitive -> . NUM_FLOAT
    (11) primitive -> . STRING
    (12) primitive -> . boolean
    (24) boolean -> . expression EQ expression
    (25) boolean -> . expression NEQ expression
    (26) boolean -> . expression GT expression
    (27) boolean -> . expression GTE expression
    (28) boolean -> . expression LT expression
    (29) boolean -> . expression LTE expression
    (30) boolean -> . expression AND expression
    (31) boolean -> . expression OR expression
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    IDENTIFIER      shift and go to state 6
    BREAK           shift and go to state 7
    PRINT           shift and go to state 9
    FOR             shift and go to state 11
    WHILE           shift and go to state 12
    FUNCTION        shift and go to state 13
    RETURN          shift and go to state 14
    MINUS           shift and go to state 16
    PLUS            shift and go to state 15
    BIT_NEG         shift and go to state 17
    NOT             shift and go to state 18
    LPAREN          shift and go to state 10
    LSQBRACK        shift and go to state 8
    STRING          shift and go to state 20
    IF              shift and go to state 21
    NUM_INT         shift and go to state 22
    NUM_FLOAT       shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26

    statement                      shift and go to state 27
    identifier                     shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    primitive                      shift and go to state 19
    boolean                        shift and go to state 24

state 2

    (1) statement_list -> statement .

    IDENTIFIER      reduce using rule 1 (statement_list -> statement .)
    BREAK           reduce using rule 1 (statement_list -> statement .)
    PRINT           reduce using rule 1 (statement_list -> statement .)
    FOR             reduce using rule 1 (statement_list -> statement .)
    WHILE           reduce using rule 1 (statement_list -> statement .)
    FUNCTION        reduce using rule 1 (statement_list -> statement .)
    RETURN          reduce using rule 1 (statement_list -> statement .)
    MINUS           reduce using rule 1 (statement_list -> statement .)
    PLUS            reduce using rule 1 (statement_list -> statement .)
    BIT_NEG         reduce using rule 1 (statement_list -> statement .)
    NOT             reduce using rule 1 (statement_list -> statement .)
    LPAREN          reduce using rule 1 (statement_list -> statement .)
    LSQBRACK        reduce using rule 1 (statement_list -> statement .)
    STRING          reduce using rule 1 (statement_list -> statement .)
    IF              reduce using rule 1 (statement_list -> statement .)
    NUM_INT         reduce using rule 1 (statement_list -> statement .)
    NUM_FLOAT       reduce using rule 1 (statement_list -> statement .)
    TRUE            reduce using rule 1 (statement_list -> statement .)
    FALSE           reduce using rule 1 (statement_list -> statement .)
    $end            reduce using rule 1 (statement_list -> statement .)
    RBRACK          reduce using rule 1 (statement_list -> statement .)


state 3

    (3) statement -> identifier .
    (51) statement -> identifier . LSQBRACK expression RSQBRACK EQUALS expression STMT_END
    (59) statement -> identifier . PLUS_EQ expression STMT_END
    (60) statement -> identifier . MINUS_EQ expression STMT_END
    (61) statement -> identifier . MUL_EQ expression STMT_END
    (62) statement -> identifier . DIV_EQ expression STMT_END
    (63) statement -> identifier . EXP_EQ expression STMT_END
    (64) statement -> identifier . MOD_EQ expression STMT_END
    (79) statement -> identifier . LPAREN arguments RPAREN STMT_END
    (81) statement -> identifier . LPAREN error RPAREN STMT_END
    (46) expression -> identifier . LSQBRACK expression RSQBRACK
    (47) expression -> identifier . LSQBRACK expression COLON expression RSQBRACK
    (48) expression -> identifier . LSQBRACK COLON expression RSQBRACK
    (49) expression -> identifier . LSQBRACK expression COLON RSQBRACK
    (50) expression -> identifier . LSQBRACK COLON RSQBRACK
    (52) expression -> identifier . EQUALS assignable STMT_END
    (65) expression -> identifier . DOUBLE_PLUS
    (66) expression -> identifier . DOUBLE_MINUS
    (69) expression -> identifier .
    (78) expression -> identifier . LPAREN arguments RPAREN
    (80) expression -> identifier . LPAREN error RPAREN

  ! shift/reduce conflict for LSQBRACK resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! reduce/reduce conflict for PLUS resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for MINUS resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for NOT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for BREAK resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for PRINT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for FOR resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for WHILE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for RETURN resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for BIT_NEG resolved using rule 3 (statement -> identifier .)
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LSQBRACK resolved as shift
  ! reduce/reduce conflict for STRING resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for IF resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for NUM_INT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for NUM_FLOAT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for TRUE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for FALSE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for $end resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for RBRACK resolved using rule 3 (statement -> identifier .)
    IDENTIFIER      reduce using rule 3 (statement -> identifier .)
    BREAK           reduce using rule 3 (statement -> identifier .)
    PRINT           reduce using rule 3 (statement -> identifier .)
    FOR             reduce using rule 3 (statement -> identifier .)
    WHILE           reduce using rule 3 (statement -> identifier .)
    FUNCTION        reduce using rule 3 (statement -> identifier .)
    RETURN          reduce using rule 3 (statement -> identifier .)
    MINUS           reduce using rule 3 (statement -> identifier .)
    PLUS            reduce using rule 3 (statement -> identifier .)
    BIT_NEG         reduce using rule 3 (statement -> identifier .)
    NOT             reduce using rule 3 (statement -> identifier .)
    STRING          reduce using rule 3 (statement -> identifier .)
    IF              reduce using rule 3 (statement -> identifier .)
    NUM_INT         reduce using rule 3 (statement -> identifier .)
    NUM_FLOAT       reduce using rule 3 (statement -> identifier .)
    TRUE            reduce using rule 3 (statement -> identifier .)
    FALSE           reduce using rule 3 (statement -> identifier .)
    $end            reduce using rule 3 (statement -> identifier .)
    RBRACK          reduce using rule 3 (statement -> identifier .)
    LSQBRACK        shift and go to state 28
    PLUS_EQ         shift and go to state 30
    MINUS_EQ        shift and go to state 31
    MUL_EQ          shift and go to state 32
    DIV_EQ          shift and go to state 33
    EXP_EQ          shift and go to state 34
    MOD_EQ          shift and go to state 35
    LPAREN          shift and go to state 36
    EQUALS          shift and go to state 29
    DOUBLE_PLUS     shift and go to state 37
    DOUBLE_MINUS    shift and go to state 38
    MUL             reduce using rule 69 (expression -> identifier .)
    DIV             reduce using rule 69 (expression -> identifier .)
    EXP             reduce using rule 69 (expression -> identifier .)
    MOD             reduce using rule 69 (expression -> identifier .)
    BIT_AND         reduce using rule 69 (expression -> identifier .)
    BIT_OR          reduce using rule 69 (expression -> identifier .)
    BIT_XOR         reduce using rule 69 (expression -> identifier .)
    LSHIFT          reduce using rule 69 (expression -> identifier .)
    RSHIFT          reduce using rule 69 (expression -> identifier .)
    QUESTION_MARK   reduce using rule 69 (expression -> identifier .)
    IN              reduce using rule 69 (expression -> identifier .)
    EQ              reduce using rule 69 (expression -> identifier .)
    NEQ             reduce using rule 69 (expression -> identifier .)
    GT              reduce using rule 69 (expression -> identifier .)
    GTE             reduce using rule 69 (expression -> identifier .)
    LT              reduce using rule 69 (expression -> identifier .)
    LTE             reduce using rule 69 (expression -> identifier .)
    AND             reduce using rule 69 (expression -> identifier .)
    OR              reduce using rule 69 (expression -> identifier .)

  ! LPAREN          [ reduce using rule 3 (statement -> identifier .) ]
  ! LSQBRACK        [ reduce using rule 3 (statement -> identifier .) ]
  ! PLUS            [ reduce using rule 69 (expression -> identifier .) ]
  ! MINUS           [ reduce using rule 69 (expression -> identifier .) ]
  ! NOT             [ reduce using rule 69 (expression -> identifier .) ]
  ! IDENTIFIER      [ reduce using rule 69 (expression -> identifier .) ]
  ! BREAK           [ reduce using rule 69 (expression -> identifier .) ]
  ! PRINT           [ reduce using rule 69 (expression -> identifier .) ]
  ! FOR             [ reduce using rule 69 (expression -> identifier .) ]
  ! WHILE           [ reduce using rule 69 (expression -> identifier .) ]
  ! FUNCTION        [ reduce using rule 69 (expression -> identifier .) ]
  ! RETURN          [ reduce using rule 69 (expression -> identifier .) ]
  ! BIT_NEG         [ reduce using rule 69 (expression -> identifier .) ]
  ! LPAREN          [ reduce using rule 69 (expression -> identifier .) ]
  ! LSQBRACK        [ reduce using rule 69 (expression -> identifier .) ]
  ! STRING          [ reduce using rule 69 (expression -> identifier .) ]
  ! IF              [ reduce using rule 69 (expression -> identifier .) ]
  ! NUM_INT         [ reduce using rule 69 (expression -> identifier .) ]
  ! NUM_FLOAT       [ reduce using rule 69 (expression -> identifier .) ]
  ! TRUE            [ reduce using rule 69 (expression -> identifier .) ]
  ! FALSE           [ reduce using rule 69 (expression -> identifier .) ]
  ! $end            [ reduce using rule 69 (expression -> identifier .) ]
  ! RBRACK          [ reduce using rule 69 (expression -> identifier .) ]


state 4

    (4) statement -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MUL expression
    (16) expression -> expression . DIV expression
    (17) expression -> expression . EXP expression
    (18) expression -> expression . MOD expression
    (19) expression -> expression . BIT_AND expression
    (20) expression -> expression . BIT_OR expression
    (21) expression -> expression . BIT_XOR expression
    (22) expression -> expression . LSHIFT expression
    (23) expression -> expression . RSHIFT expression
    (44) expression -> expression . QUESTION_MARK expression COLON expression
    (56) expression -> expression . IN expression
    (57) expression -> expression . NOT IN expression
    (24) boolean -> expression . EQ expression
    (25) boolean -> expression . NEQ expression
    (26) boolean -> expression . GT expression
    (27) boolean -> expression . GTE expression
    (28) boolean -> expression . LT expression
    (29) boolean -> expression . LTE expression
    (30) boolean -> expression . AND expression
    (31) boolean -> expression . OR expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
    IDENTIFIER      reduce using rule 4 (statement -> expression .)
    BREAK           reduce using rule 4 (statement -> expression .)
    PRINT           reduce using rule 4 (statement -> expression .)
    FOR             reduce using rule 4 (statement -> expression .)
    WHILE           reduce using rule 4 (statement -> expression .)
    FUNCTION        reduce using rule 4 (statement -> expression .)
    RETURN          reduce using rule 4 (statement -> expression .)
    BIT_NEG         reduce using rule 4 (statement -> expression .)
    LPAREN          reduce using rule 4 (statement -> expression .)
    LSQBRACK        reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    NUM_INT         reduce using rule 4 (statement -> expression .)
    NUM_FLOAT       reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    RBRACK          reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    MUL             shift and go to state 41
    DIV             shift and go to state 42
    EXP             shift and go to state 43
    MOD             shift and go to state 44
    BIT_AND         shift and go to state 45
    BIT_OR          shift and go to state 46
    BIT_XOR         shift and go to state 47
    LSHIFT          shift and go to state 48
    RSHIFT          shift and go to state 49
    QUESTION_MARK   shift and go to state 50
    IN              shift and go to state 51
    NOT             shift and go to state 52
    EQ              shift and go to state 53
    NEQ             shift and go to state 54
    GT              shift and go to state 55
    GTE             shift and go to state 56
    LT              shift and go to state 57
    LTE             shift and go to state 58
    AND             shift and go to state 59
    OR              shift and go to state 60

  ! MINUS           [ reduce using rule 4 (statement -> expression .) ]
  ! PLUS            [ reduce using rule 4 (statement -> expression .) ]
  ! NOT             [ reduce using rule 4 (statement -> expression .) ]


state 5

    (5) statement -> if_statement .

    IDENTIFIER      reduce using rule 5 (statement -> if_statement .)
    BREAK           reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    FUNCTION        reduce using rule 5 (statement -> if_statement .)
    RETURN          reduce using rule 5 (statement -> if_statement .)
    MINUS           reduce using rule 5 (statement -> if_statement .)
    PLUS            reduce using rule 5 (statement -> if_statement .)
    BIT_NEG         reduce using rule 5 (statement -> if_statement .)
    NOT             reduce using rule 5 (statement -> if_statement .)
    LPAREN          reduce using rule 5 (statement -> if_statement .)
    LSQBRACK        reduce using rule 5 (statement -> if_statement .)
    STRING          reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    NUM_INT         reduce using rule 5 (statement -> if_statement .)
    NUM_FLOAT       reduce using rule 5 (statement -> if_statement .)
    TRUE            reduce using rule 5 (statement -> if_statement .)
    FALSE           reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    RBRACK          reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> IDENTIFIER . STMT_END
    (7) identifier -> IDENTIFIER .
